--- a/pom.xml
+++ b/pom.xml
@@ -100,18 +100,38 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-dependencies -->
         <dependency>
-            <groupId>
-                com.mysql
-            </groupId>
-            <artifactId>
-                mysql-connector-j
-            </artifactId>
-            <scope>
-                runtime
-            </scope>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-dependencies</artifactId>
+            <version>2023.0.3</version>
+            <type>pom</type>
+            <scope>import</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-gcp-starter-data-firestore</artifactId>-->
+<!--            <version>3.2.1</version>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>spring-cloud-gcp-starter-data-firestore</artifactId>
+            <version>3.2.0</version>
+            <scope>runtime</scope>
+        </dependency>
+
+
+        <!--        <dependency>-->
+<!--            <groupId>-->
+<!--                com.mysql-->
+<!--            </groupId>-->
+<!--            <artifactId>-->
+<!--                mysql-connector-j-->
+<!--            </artifactId>-->
+<!--            <scope>-->
+<!--                runtime-->
+<!--            </scope>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>
                 org.projectlombok
@@ -142,6 +162,7 @@
         <dependency>
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-firestore</artifactId>
+<!--            <version>3.16.3</version>-->
             <version>3.25.1</version>
         </dependency>
         <dependency>
@@ -159,6 +180,7 @@
                 <artifactId>
                     spring-boot-maven-plugin
                 </artifactId>
+                <version>3.2.0</version>
                 <configuration>
                     <excludes>
                         <exclude>
